# clock

./: Makefile.am  configure.ac  libclockcore0-0.pc.in
data/: 10_libclockcore0-0  Makefile.am  clock.schemas
debian/: changelog  control  libclockcore-dev.install  libclockcore0-0.install  libclockcore0-dev.install  rules
include/: clockcore-cities.h  clockcore-citytime.h  clockcore-gconf.h  clockcore.h
src/: Makefile.am  clockcore-cities.c  clockcore-citytime.c  clockcore-gconf.c  clockcore.c
